--- a/Template/templates/index.html
+++ b/Template/templates/index.html
@@ -1,11 +1,11 @@
-<!-- This is how you utilize the multi page application structure using the base.html -->
- {% extends "base.html" %}
+{% extends "base.html" %}
 
 {% block title %}
-Home - My Flask App
+Home Page - My Python App
 {% endblock %}
 
 {% block content %}
-    <h2>This is my Flask Application, it’s a start!</h2>
-    <p>More content to come.</p>
+    <h2>Welcome to My Python App!</h2>
+    <h3>This is the even smaller header!</h3>
+    <a href="{{ url_for('about') }}">Go to About Page</a>
 {% endblock %}
