--- a/Template/app/static/css/ucnj_style.css
+++ b/Template/app/static/css/ucnj_style.css
@@ -1,9 +1,9 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #f30202;
+body{
+    font-family: Arial;
+    background-color: red;
     text-align: center;
-    padding: 20px;
+    padding: 20 px;
 }
-h1 {
+h1{
     color: #333
 }
