--- a/Template/app/templates/base.html
+++ b/Template/app/templates/base.html
@@ -1,27 +1,31 @@
-<!-- templates/base.html -->
- <!DOCTYPE html>
- <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content ="width=device-width, initial-scale = 1.0">
-        <title>{% block tile %}My Python App{% endblock %}</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css')}}">
-    </head>
-    <body>
-        <header>
-            <h1>UCNJ Flask Demo</h1>
-        </header>
+<!DOCTYPE html>
+<html lang="en">
 
-        <main>
-            {% block content %}
-            <!-- Page specific content will go here -->
-            {% endblock %}
-        </main>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}My Flask App{% endblock %}</title>
 
-        <footer>
-            <p>&copy; 2025 Union College, Emilio Vasquez</p>
-        </footer>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/ucnj_style.css') }}">
+</head>
 
-        <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
-    </body>
- </html>
+<body>
+    <header>
+        <h1>UCNJ Flask Demo</h1>
+    </header>
+
+    <main>
+        {% block content %}
+        <!-- this is page-specific, content will go here when a child template overrides this block-->
+        {% endblock %}
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Union College - Emilio Vasquez</p>
+    </footer>
+    
+    <script src="{{ url_for('static', filename='js/flash.js') }}"></script>
+
+</body>
+
+</html>
