--- a/Template/app/templates/index.html
+++ b/Template/app/templates/index.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
 
 {% block title %}
-Home Page - My Python App
+Home - My Flask App
 {% endblock %}
 
 {% block content %}
-    <h2>Welcome to My Python App!</h2>
-    <h3>This is the even smaller header!</h3>
-    <a href="{{ url_for('about') }}">Go to About Page</a>
+    <h2>Welcome to My Flask App!</h2>
+    <a href="{{ url_for('main.about') }}">Go to About Page</a>
 {% endblock %}
